| Bug #17849 | sql_big_selects not shown in SHOW VARIABLES output | ||
|---|---|---|---|
| Submitted: | 2 Mar 2006 7:41 | Modified: | 2 May 2006 1:58 |
| Reporter: | James Day | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Sun Solaris (Solaris 9, Windows XP) |
| Assigned to: | Jim Winstead | Target Version: | |
[2 Mar 2006 7:41]
James Day
[21 Apr 2006 1:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5237
[26 Apr 2006 16:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5590
[1 May 2006 16:03]
Jim Winstead
Fixed in 5.0.22 and 5.1.10.
[2 May 2006 1:58]
Paul DuBois
Noted in 5.0.22, 5.1.10 changelogs. The <literal>sql_big_selects</literal> system variable was not displayed by <literal>SHOW VARIABLES</literal>. (Bug #17849)
